--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 
 .navbar__container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 80px;
   z-index: 1;
@@ -133,7 +133,7 @@
   transition: all 0.4s ease;
 }
 
-@media screen and (max-width: 960px){
+@media screen and (max-width: 1170px){
   .navbar__container {
       display: flex;
       justify-content: space-between;
@@ -506,7 +506,7 @@
 
 .services__wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr ;
   grid-template-rows: 2fr;
 }
 
