--- a/src/App.css
+++ b/src/App.css
@@ -584,6 +584,7 @@
 @media screen and (max-width: 1070px) {
   .services__wrapper {
       grid-template-columns: 2fr;
+      grid-template-rows: 4fr;
   }
   .services__card {
     margin: 10px;
@@ -609,7 +610,7 @@
 
   .services__card p {
     text-align: center;
-    margin-top: 24px;
+    margin-top: 12px;
     font-size: 12px;
     font-family: var(--ff-secondary);
     font-weight: var(--fw-bold);
@@ -619,7 +620,7 @@
 
   .services__card p2 {
     text-align: center;
-    margin-top: 24px;
+    margin-top: 12px;
     font-size: 10px;
     color: var(--clr-green2);
   }
