--- a/src/App.css
+++ b/src/App.css
@@ -509,7 +509,6 @@
 .services__wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr ;
-  grid-template-rows: 2fr;
 }
 
 .services__card {
@@ -583,6 +582,7 @@
 
 @media screen and (max-width: 1170px) {
   .services__wrapper {
+      display:flexbox;
       grid-template-columns: 1fr 1fr;
   }
   .services__card {
