--- a/src/App.css
+++ b/src/App.css
@@ -582,13 +582,13 @@
 
 @media screen and (max-width: 1170px) {
   .services__wrapper {
-      display:flex;
+      display:grid;
       grid-template-columns: 1fr 1fr;
   }
   .services__card {
     margin: 10px;
     height: 230px;
-    width: 160px;
+    width: 180px;
     border-radius: 22px;
     display: flex;
     flex-direction: column;
@@ -628,8 +628,47 @@
 
 @media screen and (max-width: 768px) {
   .services__wrapper {
-      grid-template-columns: 1fr;
-  }
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+.services__card {
+  margin: 10px;
+  height: 230px;
+  width: 180px;
+  border-radius: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #0f0c29;
+  background: -webkit-linear-gradient(to right, #000000, #000000, #000000);
+  background: linear-gradient(to right, #000000, #000000, #000000);
+  transition: 0.1s ease-in;
+  border: 0px solid #000000; 
+  box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
+}
+
+.services__card h1 {
+  background-image: linear-gradient(to right, var(--clr-green1), var(--clr-green2)); 
+  text-align: center;
+  font-size: 12px;
+}
+
+.services__card p {
+  text-align: center;
+  margin-top: 12px;
+  font-size: 12px;
+  font-family: var(--ff-secondary);
+  font-weight: var(--fw-bold);
+  padding: 10px;
+  color: var(--clr-light);
+}
+
+.services__card p2 {
+  text-align: center;
+  margin-top: 12px;
+  font-size: 10px;
+  color: var(--clr-green2);
+}
 }
 
 /* Footer CSS */
