--- a/src/App.css
+++ b/src/App.css
@@ -401,6 +401,14 @@
   background-image: linear-gradient(to right, #f5af19 0%,#fc00ff 100% );
 }
 
+.about__img {
+  margin: 10px;
+  height: 500px;
+  width: 500px;
+  border-radius: 12px;
+  box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
+}
+
 .fa-layer-group, .fa-users {
   font-size: 14rem;
 }
@@ -632,9 +640,9 @@
     grid-template-columns: 1fr 1fr;
 }
 .services__card {
-  margin: 10px;
+  margin: 8px;
   height: 230px;
-  width: 180px;
+  width: 170px;
   border-radius: 22px;
   display: flex;
   flex-direction: column;
@@ -650,7 +658,7 @@
 .services__card h1 {
   background-image: linear-gradient(to right, var(--clr-green1), var(--clr-green2)); 
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .services__card p {
@@ -666,7 +674,7 @@
 .services__card p2 {
   text-align: center;
   margin-top: 12px;
-  font-size: 10px;
+  font-size: 14px;
   color: var(--clr-green2);
 }
 }
