--- a/src/App.css
+++ b/src/App.css
@@ -420,7 +420,7 @@
 }
 
 /* Mobile responsive*/
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 768px) {
   .main__container {
       display: grid;
       grid-template-columns: 1fr;
@@ -459,6 +459,14 @@
   .main__content p {
       font-size: 1rem;
       margin-top: 1.5rem;
+  }
+
+  .about__img {
+    margin: 10px;
+    height: 300px;
+    width: 300px;
+    border-radius: 12px;
+    box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
   }
   
   @media  screen and (max-width: 480px) {
