--- a/src/App.css
+++ b/src/App.css
@@ -315,14 +315,15 @@
 }
 
 .main__content h1 {
-  background-color: #000000;
+  background: -webkit-linear-gradient(to right, var(--clr-green1), var(--clr-green2));
+  background: linear-gradient(to right, var(--clr-green1), var(--clr-green2));
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
   text-transform: uppercase;
-  margin-bottom: 32px;
+  margin-bottom: 10px;
 }
 
 .main__content h2 {
@@ -402,9 +403,11 @@
 }
 
 .about__img {
+  align-items: center;
+  justify-content: center;
   margin: 10px;
   height: 500px;
-  width: 500px;
+  width: 680px;
   border-radius: 12px;
   box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
 }
@@ -462,9 +465,11 @@
   }
 
   .about__img {
+    align-items: center;
+    justify-content: center;
     margin: 10px;
     height: 300px;
-    width: 300px;
+    width: 450px;
     border-radius: 12px;
     box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
   }
@@ -519,12 +524,15 @@
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
   padding-bottom: 10px;
+  margin-top: -35px;
   font-size: var(--fs-h2);
 }
 
 .services__wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr ;
+  align-items: center;
+  justify-content: center;
 }
 
 .services__card {
