--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,14 @@
   --fw-reg: 300;
   --fw-bold: 800;
   /*colors*/
-  --clr-light: #fff;
-  --clr-dark: #0d0c0c;
+  --clr-light: #ecdcdc;
+  --clr-dark: #cab8b8ab;
   --clr-accent: #0d64b6;
   --clr-orange: #f5af19;
-  --clr-green1: #55ca68;
-  --clr-green2: #7bec1e;
+  --clr-green1: #757a76;
+  --clr-green2: #9ca198b6;
+  --clr-navbarfont: #000000;
+  --clr-navbarfontHover: #5f5656;
   /*font size*/
   --fs-h1: 5.0rem;
   --fs-h2: 2.25rem;
@@ -93,7 +95,7 @@
 }
 
 .navbar__links {
-  color: #fff;
+  color:var(--clr-navbarfont);
   display:flex;
   align-items: center;
   justify-content: center;
@@ -131,7 +133,7 @@
 }
 
 .navbar__links:hover {
-  color: var(--clr-green2);
+  color: var(--clr-navbarfontHover);
   transition: all 0.4s ease;
 }
 
@@ -292,7 +294,7 @@
 
 /* About Section*/
 .main {
-  background-color: #fff;
+  background-color: var(--clr-light);
   padding: 10rem 0;
 }
 
@@ -407,7 +409,7 @@
   justify-content: center;
   margin: 10px;
   height: 500px;
-  width: 680px;
+  width: 500px;
   border-radius: 12px;
   box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
 }
@@ -706,7 +708,15 @@
 }
 
 #footer__logo {
-  color: var(--clr-green2);
+  color: var(--clr-navbarfont);
+  background: -webkit-linear-gradient(to right, var(--clr-green1), var(--clr-green2));
+  background: linear-gradient(to right, var(--clr-green1), var(--clr-green2));
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  font-weight: var(--fs-h1);
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -737,18 +747,18 @@
 
 .footer__link--items h2 {
   margin-bottom: 16px;
-  color: var(--clr-green2);
+  color: var(--clr-navbarfont);
 }
 
 .footer__link--items a {
-  color: var(--clr-green2);
+  color: var(--clr-navbarfontHover);
   text-decoration: none;
   margin-bottom: 0.5rem;
   transition: 0.3 ease-in;
 }
 
 .footer__link--items a:hover {
-  color: #e9e9e9;
+  color: var(--clr-green2);
   transition: 0.3s ease-out;
 }
 
