--- a/src/App.css
+++ b/src/App.css
@@ -551,7 +551,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: #ffffff;
+  background: var(--clr-dark);
   transition: 0.1s ease-in;
   border: 0px solid #000000; 
   box-shadow: 2px 2px 10px 0px rgb(46, 44, 44);
